/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-11-19
accept pull request #8

------------------
2014-11-17
Restore temporary array setting in method WriteData and 
fix bug in method write_DataRecord in class cdm_DFI_PLOT3D
"Remove temporary array setting in the case of mismatch of guide cells"の
リビジョンで削除したテンポラリ配列の作成箇所を復活させた。
出力用に用意したデータのガイドセル値(WriteDataの引数)より出力する
ガイドセル値(DFI_Finfo.GuideCell)の方が小さい場合に、このテンポラリ配列
を適用するため。出力するガイドセル値の方が大きい場合はエラー。
また、クラスcdm_DFI_PLOT3Dのメソッドwrite_DataRecordにおいて、
出力するガイドセル値(DFI_Finfo.GuideCell)を適用すべき所に、
出力用に用意したデータのガイドセル値(WriteDataの引数)を適用していたので修正した。

------------------
2014-11-14
Add ResultFormat at VisIt section, release 0.6.1

------------------
2014-11-13
Bug fix, release 0.6.0

------------------
2014-11-12
Remove constraint on number of variables in method interp_coarse
クラスcdm_Arrayのメソッドinterp_coarseにおいて、変数の個数が1か3に
制限されたままだったので、その制限を削除した。

------------------
2014-11-10
Change bov to D_CDM_EXT_BOV in if statement for reading FileFormat and 
define D_CDM_EXT_BOV_DATAFILE as dat
dfiファイルのFileFormatの読み込み判定文において、BOV形式であるかの
判定を"bov"からD_CDM_EXT_BOVに戻した。
また、BOV形式のデータファイルの拡張子を指定するマクロD_CDM_EXT_BOV_DATAFILEを
定義し、コード内のD_CDM_EXT_BOVをD_CDM_EXT_BOV_DATAFILEで置き換えた。
さらに、cdm_DFI_BOV.C、convOutput_BOV.Cにおいてファイル拡張子を"bov","dat"と
直接与えている部分があったので、マクロ名D_CDM_EXT_BOV、D_CDM_EXT_BOV_DATAFILE
で置き換えた。


------------------
2014-11-09
Change D_CDM_EXT_BOV to bov in if statement for reading FileFormat
dfiファイルのFileFormatの読み込み判定文において、BOV形式であるかの
判定をD_CDM_EXT_BOVから"bov"に変更した。

------------------
2014-11-07
Modify write_DataRecord in cdm_DFI_BOV
BOV形式のwrite_DataRecordにおいて、ベクトル成分⇒変数の個数に
対応できていない部分が残っていたので修正した。

------------------
2014-11-07
Remove temporary array setting in the case of mismatch of guide cells
メソッドWriteDataにおいて、WriteDataの引数で指定するガイドセル値と
DFI_Finfoのガイドセル値が一致しない場合、テンポラリに配列を作成する